Fix layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -739,6 +739,7 @@ hr.toxip-style:after {
   .comment-form-header, .comment-section-header {
     text-align: center;
     width: 100%;
+    margin-bottom: 50px;
   }
 }
 
